# context

./: Cargo.toml  README.md
src/: config.rs  eventerr.rs  lib.rs  metadata.rs  util.rs
src/event/: Cargo.toml
src/event/src/: lib.rs
src/event_macro/: Cargo.toml
src/event_macro/src/: lib.rs
