[package]
name = "context"
version = "0.1.0"
edition = "2018"
exclude = [
    "src/lib.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
serde = { version="1.0.130", features = ["derive"] }
serde_bytes = "0.11.5"
futures = "0.3.17"
