[package]
name = "context"
version = "0.1.0"
edition = "2018"
exclude = [
    "src/lib.rs",
    "Cargo.toml",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
reqwest = "0.11.4"
serde = "1.0.111"
hyper = "0.10.15"
serde_bytes = "0.11"
serde_json = "1.0.68"
event_macro = {path = "./src/event_macro" }
event = {path = "./src/event" }